--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         div:nth-of-type(4) {
-            background-color: magenta;
+            background-color: #9D3158;
         }
 
         img {
@@ -53,8 +53,8 @@
             <div id="red">RED</div>
             <div id="blue">BLUE</div>
             <div id="green">GREEN</div>
-            <div> COLOR SANGRIA</div>
-            <img src="https://uploads.codesandbox.io/uploads/user/130be9a5-67a2-4c39-8787-3dad3e55e887/YXrv-Pokemon.png"
+            <div id="#9D3158">COLOR SANGRIA</div>
+            <img id="Pikachu" src="https://uploads.codesandbox.io/uploads/user/130be9a5-67a2-4c39-8787-3dad3e55e887/YXrv-Pokemon.png"
                 alt="">
         </section>
 
